--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -4,7 +4,7 @@
 
 {% block additional_links %}
 <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+    <a class="nav-link" href="{{ url_for('url_for('dashboard_blueprint.dashboard')') }}">Dashboard</a>
 </li>
 {% endblock %}
 
