--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,26 +10,33 @@
 <body class="{% block body_class %}{% endblock %}">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('home') }}">E-Voting Portal</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    {% if is_dashboard %}
+            <a class="navbar-brand" href="{{ url_for('dashboard_blueprint.dashboard') }}">E-Voting Portal</a>
+            <!-- Other navigation items -->
+            <ul class="navbar-nav ml-auto">
+                <!-- Insert additional links -->
+                {% block additional_links %}{% endblock %}
+
+                <!-- Conditional navigation links -->
+                {% if current_user.is_authenticated %}
+                    <!-- Link to profile or dashboard -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
+                        <a class="nav-link" href="{{ url_for('dashboard_blueprint.dashboard') }}">Dashboard</a>
                     </li>
-                    {% endif %}
+                    <!-- Logout link -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                        <a class="nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
                     </li>
+                {% else %}
+                    <!-- Login link -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('instructions') }}">Instructions</a>
+                        <a class="nav-link" href="{{ url_for('user_blueprint.login') }}">Login</a>
                     </li>
-                    {% block additional_links %}{% endblock %}
-                </ul>
-            </div>
+                    <!-- Signup link -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('user_blueprint.signup') }}">Signup</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
 
