--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,11 +6,12 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="login-form bg-light mt-4 p-4">
-            <form action="/login" method="post" class="row g-3"> <!-- Adjust action as per backend implementation -->
+            <form action="{{ url_for('user_blueprint.login') }}" method="post" class="row g-3">
+                {{ form.hidden_tag() }}
                 <h4>Welcome to E-Voting</h4>
                 <div class="col-12">
-                    <label>Username</label>
-                    <input type="text" name="username" class="form-control" placeholder="Username" required>
+                    <label>Email</label>
+                    <input type="email" name="email" class="form-control" placeholder="Email" required>
                 </div>
                 <div class="col-12">
                     <label>Password</label>
@@ -22,7 +23,7 @@
             </form>
             <hr class="mt-4">
             <div class="col-12">
-                <p class="text-center mb-0">Don't have an account yet? <a href="{{ url_for('signup') }}">Signup</a></p>
+                <p class="text-center mb-0">Don't have an account yet? <a href="{{ url_for('user_blueprint.signup') }}">Signup</a></p>
             </div>
         </div>
     </div>
