--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block additional_links %}
 <li class="nav-item">
-    <a class="nav-link btn btn-danger" href="{{ url_for('vote_blueprint.vote') }}">Vote</a>
+    <a class="nav-link btn btn-danger" href="{{ url_for('facial_recognition') }}">Vote</a>
 </li>
 {% endblock %}
 
